--- a/views/index.erb
+++ b/views/index.erb
@@ -27,6 +27,11 @@
         <div class="form-group">
           <input type="text" value="" class="form-control" required name="hn_username" />
           <input type="submit" class="btn btn-default" value="Submit">
+					<% if @message %>
+						<div style="color:red">
+							<%= @message %>
+						</div>
+					<% end %>
         </div>
         
       </form>
